--- a/src/components/Courses/components/CourseCard/CourseCard.css
+++ b/src/components/Courses/components/CourseCard/CourseCard.css
@@ -1,4 +1,6 @@
 .course-card {
+    display: flex;
+    justify-content: space-between;
     margin: 20px 0;
     padding: 20px;
     display: flex;
