--- a/src/components/Main/CreateCourse/CreateCourse.css
+++ b/src/components/Main/CreateCourse/CreateCourse.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
 }
 
-.column {
+.create-column {
     display: flex;
     flex-direction: column;
     align-items: center;
