--- a/src/components/Auth/Login/Login.css
+++ b/src/components/Auth/Login/Login.css
@@ -1,4 +1,7 @@
-.column {
+.auth-column {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     margin: 10% auto 0 auto;
 }
 
