--- a/src/components/Main/CourseInfo/CourseInfo.css
+++ b/src/components/Main/CourseInfo/CourseInfo.css
@@ -3,6 +3,10 @@
     text-align: center;
 }
 
+.description {
+    max-width: 75%;
+}
+
 .information {
     display: flex;
     justify-content: space-between;
@@ -12,6 +16,6 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    max-width: 170px;
+    max-width: 18%;
     gap: 5px;
 }
