--- a/src/common/Button/Button.css
+++ b/src/common/Button/Button.css
@@ -1,27 +1,84 @@
 .btn {
-    padding: 10px 25px;
-    font-weight: 600;
-    border: 2px solid #af00af;
-    background: transparent;
-    cursor: pointer;
-    transition: .2s;
+  width: 15rem;
+  height: 4rem;
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.2s ease;
 }
 
-.btn:hover {
-    color: #fff;
-    outline: none;
-    border-radius: 5px;
-    background: #af00af;
+.btn-primary {
+  color: var(--greyLight-1);
+  background: var(--primary);
+  box-shadow: inset 0.2rem 0.2rem 1rem var(--primary-light),
+    inset -0.2rem -0.2rem 1rem var(--primary-dark), var(--shadow);
 }
 
-.btn:active {
-    transform: scale(.95);
+.btn-primary:hover {
+  color: var(--white);
+}
+
+.btn-primary:active {
+  box-shadow: inset 0.2rem 0.2rem 1rem var(--primary-dark),
+    inset -0.2rem -0.2rem 1rem var(--primary-light);
+}
+
+.btn-secondary {
+  color: var(--greyDark);
+}
+
+.btn-secondary:hover {
+  color: var(--primary);
+}
+
+.btn-secondary:active {
+  box-shadow: var(--inner-shadow);
+}
+
+.btn > p {
+  font-size: 1.6rem;
+  letter-spacing: 2px;
+}
+
+.logout-btn {
+  width: 10rem;
+  height: 3.5rem;
+}
+
+.logout-btn > p {
+  font-size: 1.35rem;
+}
+
+.create-author-button {
+  margin: 15px 0 80px 0;
+  align-self: center;
+}
+
+.add-course-btn > p {
+  letter-spacing: 1px;
+}
+
+.search-btn {
+  margin-top: 5px;
+  width: 6rem;
+  height: 3rem;
+}
+
+.search-btn > p {
+  font-size: 1.3rem;
+  letter-spacing: 1px;
 }
 
 .show-course-btn {
-    font-size: 50px;
+  margin: 0 auto;
+  width: 11rem;
+  height: 3rem;
 }
-.create-author-button {
-    margin: 15px 0 80px 0;
-    align-self: center;
+
+.show-course-btn > p {
+  font-size: 1.1rem;
 }
