--- a/src/components/Main/Courses/CourseCard/CourseCard.css
+++ b/src/components/Main/Courses/CourseCard/CourseCard.css
@@ -1,40 +1,44 @@
 .course-card {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0;
-    padding: 20px;
-    display: flex;
-    border: 2px solid tomato;
+  margin: 30px 0;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 2rem;
+  box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2),
+    -0.2rem -0.2rem 1.2rem rgba(255, 255, 255, 0.7);
 }
 
 .course-about {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .course-info-list {
-    margin-bottom: 20px;
-    list-style-type: none;
+  margin-bottom: 20px;
+  list-style-type: none;
 }
 
 .course-info-list > li {
-    margin: 5px 0;
+  margin: 7px 0;
+  color: var(--greyLight-4);
 }
 
 .course-info {
-    font-weight: 800;
+  color: #000;
+  font-weight: 700;
 }
 
 .title {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+  letter-spacing: 2px;
 }
 
 .course-details {
-    display: flex;
-    flex-direction: column;
-    min-width: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 320px;
 }
 
-.course-card button {
-    margin: 0 auto;
-    width: 60%;
+.description {
+  color: var(--greyLight-4);
 }
