--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,38 @@
+:root {
+  --primary-light: #8abdff;
+  --primary: #6d5dfc;
+  --primary-dark: #5b0eeb;
+
+  --white: #ffffff;
+  --greyLight-1: #e4ebf5;
+  --greyLight-2: #c8d0e7;
+  --greyLight-3: #bec8e4;
+  --greyLight-4: #8694bd;
+  --greyDark: #9baacf;
+  --shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2),
+    -0.2rem -0.2rem 0.5rem var(--white);
+  --inner-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2),
+    inset -0.2rem -0.2rem 0.5rem var(--white);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  background: var(--greyLight-1);
+}
+
 a {
   text-decoration: none;
+  color: var(--primary);
+  font-weight: 600;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 li {
@@ -14,14 +41,36 @@ li {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-button, input, textarea, select{
+body::-webkit-scrollbar {
+  width: .7rem;
+}
+ 
+body::-webkit-scrollbar-track {
+  background: var(--greyLight-1);
+  /* border-left: 1px solid var(--greyDark); */
+}
+ 
+body::-webkit-scrollbar-thumb {
+  border-radius: 50px;
+  background-color: var(--primary);
+}
+
+button {
+  background: none;
+}
+
+button,
+input,
+textarea,
+select {
+  border: none;
   font: inherit;
   color: inherit;
 }
