--- a/src/components/Main/CourseInfo/CourseInfo.css
+++ b/src/components/Main/CourseInfo/CourseInfo.css
@@ -1,21 +1,50 @@
+.course-all-info {
+  margin: 3rem 0;
+  padding: 2rem;
+  border-radius: 1rem;
+  box-shadow: var(--inner-shadow);
+}
+
 .course-title {
-    margin: 5px 0 50px 0;
-    text-align: center;
+  margin: 0.25rem 0 3rem 0;
+  color: var(--primary);
+  font-size: 2.5rem;
+  text-align: center;
+  letter-spacing: 5px;
+}
+
+.course-title-wrapper {
+  display: inline;
+  width: 3rem;
+  height: 3rem;
+  background-color: red;
+  box-shadow: var(--shadow);
 }
 
 .detail-description {
-    max-width: 75%;
+  color: var(--greyLight-4);
 }
 
 .information {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .detail-information {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-width: 18%;
-    gap: 5px;
+  float: right;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-left: 10px;
+  padding: 1rem;
+  max-width: 35%;
+  min-width: 18%;
+  color: var(--greyLight-4);
+  gap: 5px;
+  border-radius: 1rem;
+  box-shadow: var(--shadow);
+}
+
+.back-link {
+  font-size: 1.5rem;
 }
