--- a/src/index.css
+++ b/src/index.css
@@ -49,14 +49,14 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: .7rem;
+  width: 0.7rem;
 }
- 
+
 body::-webkit-scrollbar-track {
   background: var(--greyLight-1);
   /* border-left: 1px solid var(--greyDark); */
 }
- 
+
 body::-webkit-scrollbar-thumb {
   border-radius: 50px;
   background-color: var(--primary);
@@ -76,6 +76,60 @@ select {
 }
 
 .container {
+  max-width: 95%;
   margin: 0 auto;
-  max-width: 1200px;
+}
+
+.wrapper {
+  max-width: 95%;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .container {
+    max-width: 570px;
+  }
+  .wrapper {
+    max-width: 570px;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .container {
+    max-width: 750px;
+  }
+  .wrapper {
+    max-width: 750px;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .container {
+    max-width: 900px;
+  }
+  .wrapper {
+    max-width: 900px;
+  }
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1150px;
+  }
+  .wrapper {
+    max-width: 1150px;
+  }
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1200px;
+  }
+  .wrapper {
+    max-width: 1200px;
+  }
 }
