--- a/src/components/Main/CreateCourse/CreateCourse.css
+++ b/src/components/Main/CreateCourse/CreateCourse.css
@@ -31,8 +31,31 @@
 }
 
 .available-authors-list {
+  padding: 10px 20px;
   margin-bottom: 1em;
   min-width: 13vw;
+  height: 30vh;
+  border-radius: 10px;
+  overflow-x: hidden;
+  box-shadow: var(--inner-shadow)
+}
+
+.available-authors-list::-webkit-scrollbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: .7em;
+}
+.available-authors-list::-webkit-scrollbar-track {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: var(--greyLight-1);
+}
+.available-authors-list::-webkit-scrollbar-thumb {
+  margin-left: 30px;
+  border-radius: 50px;
+  background-color: var(--primary);
 }
 
 .available-author {
