--- a/src/common/Button/Button.css
+++ b/src/common/Button/Button.css
@@ -1,12 +1,13 @@
 .btn {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
   width: 15rem;
   height: 4rem;
   border-radius: 1rem;
   box-shadow: var(--shadow);
-  justify-self: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
   transition: 0.2s ease;
 }
@@ -69,9 +70,8 @@
 }
 
 .show-course-btn {
-  margin: 0 auto;
-  width: 11rem;
-  height: 3rem;
+  width: 180px;
+  height: 5vh;
 }
 
 .show-course-btn > p {
@@ -91,7 +91,7 @@
 }
 
 .author-btn {
-  margin: .3rem 0;
+  margin: 0.3rem 0;
   width: 5rem;
   height: 2.5rem;
 }
@@ -99,4 +99,24 @@
 .author-btn > p {
   font-size: 1.3rem;
   letter-spacing: 0;
+}
+
+.btn > svg {
+  height: 50%;
+  transition: 0.2s;
+}
+
+.btn:hover > svg {
+  fill: var(--primary);
+}
+
+.small-btn {
+  width: 50px;
+  height: 5vh;
+}
+
+.course-card-btns {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
